fix excess spacing on project meta. allow rows to be sized by content.

--- a/themes/gfsc/assets/sass/pages/_project.sass
+++ b/themes/gfsc/assets/sass/pages/_project.sass
@@ -30,7 +30,6 @@
     +for-tablet-portrait-up
       display: grid
       grid-template-columns: 2fr 1fr
-      grid-template-rows: 1fr 1fr
       +border(bottom)
       margin: 0 -5rem
     p
